--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,4 +1,4 @@
-<%= layout("/layouts/boilerplate") %>
+<% layout("/layouts/boilerplate") -%>
 <div class="row mt-3">
   <div class="col-md-8 offset-2">
 
