--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,31 +1,34 @@
 <%= layout("/layouts/boilerplate") %>
 
-    <h3>All Listings</h3>
-    
+<h3>All Listings</h3>
+
 <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
   <% for(let listing of allListings) { %>
-    <a href="/listings/<%=listing._id %>" class="listing-link"></a>
-    <div class="card col" style="height: 20rem;">
-      <img src="<%= listing.image" class="card-img-top" alt="listing_image">
+  <a href="listings/<%=listing.id %>" class="listing-link">
+    <div class="card col">
+      <img src="<%= listing.image%>" class="card-img-top" alt="listing_image"
+        style="height: 20rem;">
       <div class="card-img-overlay">abc</div>
       <div class="card-body">
         <p class="card-text">
-         <b> <%= listing.title %></b>
-          <%= listing.price.toLocalString("en-IN") %>
+          <b> <%= listing.title %></b> <br>
+          &#8377; <%= listing.price.toLocaleString("en-IN") %>/night <br>
         </p>
       </div>
     </div>
-    </a>
-    <% } %>
+  </a>
+  <% } %>
 </div>
 
-    <!-- <form method="GET" action="/listings/new">
+<!-- <form method="GET" action="/listings/new">
 
       <button>Create New Listing</button>
     </form>
     <ul>
      
-      <li><a href="/listings/<%= listing._id %>"> <%= listing.title %> </a></li>
+      <li><a href="/listings
+        
+        //
+       </a></li>
      
     </ul> -->
-  
