--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,11 +1,11 @@
-<%= layout("/layouts/boilerplate") %>
+<% layout("/layouts/boilerplate") -%>
 <div class="row">
   <div class="col-8 offset-2">
     <h3 class="my-3">Create a New Listing</h3>
     <form method="POST" action="/listings" novalidate class="needs-validation">
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
-        <input name="listing[title]" placeholder="Title" type="text" class="form- control" id="title" required/>
+        <input name="listing[title]" placeholder="Title" type="text" class="form-control" id="title" required/>
       <div class="valid-feedback">
         Looks beeter.
       </div>
@@ -14,7 +14,7 @@
       <label for="description" class="form-label">Description</label>
       <textarea
         name="listing[description]"
-        placeholder="Description" id="description" required
+        placeholder="Description" id="description" class="form-control" required
       ></textarea>
       <div class="invalid-feedback">
         Please write a a short description.
@@ -37,7 +37,7 @@
       <div class="row">
       <div class="mb-3 col-md-4">
         <label for="price" class="form-label">Price</label>
-        <input name="listing[price]" placeholder="1500" type="number" id="price" required/>
+        <input name="listing[price]" placeholder="1500" type="number" id="price"class="form-control"required/>
         <div class="invalid-feedback">
           Please choose a valid Price.
         </div>
