--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,4 +1,4 @@
-<%=layout("/layouts/boilerplate") %>
+<% layout("/layouts/boilerplate") -%>
 <div class="row mt-3">
   <div class="col-md-8 offset-3">
     <h3>Listing Details :</h3>
@@ -7,7 +7,7 @@
 <img src="<%= listing.image %>" alt="listing_image" class="show-img">
 <div class="card-body">
   <b><p class="card-text">
-    ><%= listing.title %>
+    <%= listing.title %>
   </p></b><br>
   <%= listing.description %> <br>
   &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
@@ -25,6 +25,20 @@
       <button class="btn -btn-dark offset-5">Delete</button>
     </form>
   </div>
-   
+  <hr>
+   <div class="">
+    <h4>Review</h4>
+    <form action="/listings/<%= listing._id %>/reviews" method="post">
+      <div class="mb-3 mt-3">
+        <label for="rating" class="form-label">Rating</label>
+        <input type="range" min="1" max="5" id="rating" name="review[rating]">
+      </div>
+      <div>
+        <label for="comment" class="form-label">Comment</label>
+        <textarea name="review[comment]" class="form-control" id="comment" cols="30" rows="10"></textarea>
+      </div>
+      <button class="btn btn-outline-dark">Submit</button>
+    </form>
+   </div>
   
 </div>
