--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -21,14 +21,14 @@
       </div>
      </div>
     
-      <div class="mb-3">
+     <div class="mb-3">
         <label for="image" class="form-label">Image</label>
         <input
           name="listing[image]"
           placeholder="Image URL/Link"
           type="text"
           id="image"
-          class="form-control" required
+          class="form-control" 
         />
         <div class="invalid-feedback">
           Please choose a valid url.
