--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -5,7 +5,7 @@
 <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
   <% for(let listing of allListings) { %>
   <a href="listings/<%=listing.id %>" class="listing-link">
-    <div class="card col">
+    <div class="card col listing-card">
       <img src="<%= listing.image%>" class="card-img-top" alt="listing_image"
         style="height: 20rem;">
       <div class="card-img-overlay">abc</div>
@@ -16,6 +16,7 @@
         </p>
       </div>
     </div>
+    
   </a>
   <% } %>
 </div>
