--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -3,12 +3,12 @@
   <div class="col-md-8 offset-3">
     <h3>Listing Details :</h3>
   </div>
-  <div class="card col-6 offset-3 show-card">
-<img src="<%= listing.image %>" alt="listing_image" class="show-img">
+  <div class="card col-6 offset-3 show-card listing-card">
+<img src="<%= listing.image %>" alt="listing_image" class="show-img card-img-top">
 <div class="card-body">
-  <b><p class="card-text">
-    <%= listing.title %>
-  </p></b><br>
+  <p class="card-text">
+  <b>  <%= listing.title %>  </b>
+  </p><br>
   <%= listing.description %> <br>
   &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
   <%= listing.location %> <br>
@@ -16,29 +16,48 @@
 </div>
   </div>
    
-
-  <div class="btns">
+<br>
+  <div class="btns mb-3">
     
     <a href="/listings/<%= listing._id %>/edit" class=" col-1 offset-3 btn btn-dark edit-btn">Edit</a>
   
     <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
-      <button class="btn -btn-dark offset-5">Delete</button>
+      <button class="btn btn-dark offset-5">Delete</button>
     </form>
   </div>
-  <hr>
-   <div class="">
-    <h4>Review</h4>
-    <form action="/listings/<%= listing._id %>/reviews" method="post">
+
+   <div class="mb-3 mt-3 col-8 offset-3">
+    <hr>
+    <h4 class="mb-2 mt-2">Review</h4>
+    <form action="/listings/<%= listing._id %>/reviews" method="post" novalidate class="needs-validation">
       <div class="mb-3 mt-3">
         <label for="rating" class="form-label">Rating</label>
-        <input type="range" min="1" max="5" id="rating" name="review[rating]">
+        <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
       </div>
-      <div>
+      <div class="mb-3 mt-3">
         <label for="comment" class="form-label">Comment</label>
-        <textarea name="review[comment]" class="form-control" id="comment" cols="30" rows="10"></textarea>
+        <textarea name="review[comment]" class="form-control" id="comment" cols="30" rows="5" required></textarea>
+        <div class="invalid-feedback">Please add some comments for review</div>
       </div>
       <button class="btn btn-outline-dark">Submit</button>
     </form>
-   </div>
-  
+
+    <hr>
+  <p><b>All Reviews</b></p>
+  <div class="row">
+
+  <%for(let review of listing.reviews){ %>
+  <div class="card col-5 ms-3 mb-3">
+    <div class="card-body ms-2 p-2">
+      <h5 class="card-title">Harry Potter</h5>
+      <p class="card-text"><%= review.comment%></p>
+      <p class="card-text"><%= review.rating%> stars</p>
+    </div>
+    <form action="/listings/<%= listing._id%>/reviews/<%=review._id%>?_method=DELETE" method="post">
+      <button class="btn btn-outline-danger btn-sm mb-3">Delete</button>
+    </form>
+  </div>
+  <% } %>
+</div>
+</div>
 </div>
