--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,21 @@ body {
 .nav-link{
     color: #222222 !important;
 }
+
+.search-btn{
+    background-color: #fe424d !important;
+    color: #fff !important;
+    border-radius: 25px !important;
+    padding: 0 1rem 0 1rem !important;
+}
+
+.search-inp{
+    border-radius: 25px !important;
+    padding: 0.5rem 3.5rem 0.5rem 3.5rem !important; 
+}
+.btn-icon{
+    display: inline !important;
+}
 /* cards */
 .listing-card{
     border:none !important;
