--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -13,8 +13,10 @@
 
         <div class="navbar-nav ms-auto">
           <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <input class="form-control me-2 search-inp" type="search" placeholder="Search destinations">
+           
+            <button class="btn search-btn" type="submit">
+              <i class="fa-solid fa-magnifying-glass btn-icon mx-2"></i>Search</button>
           </form>
         </div>
 
